--- a/index.html
+++ b/index.html
@@ -61,5 +61,7 @@
         document.getElementById("Canvas").firstChild);
     }
 
+<a href="program.html">Go to Program</a>
+    
   </script>
 </body>
